--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: black;
+  background-color: #141414;
   color: white;
 }
 
@@ -18,6 +18,7 @@ body {
 
 html,
 body{overflow-x: hidden;
+ 
 }
 
 body::-webkit-scrollbar{
